tests/languages/java/snapshots/outline.snap
---
source: tests/support/mod.rs
expression: captures
---
- name: context
  line: 3
  column: 1
  text: public
- name: context
  line: 3
  column: 8
  text: class
- name: name
  line: 3
  column: 14
  text: Outline
- name: item
  line: 3
  column: 22
  text: "{\n    public static final String CONSTANT_FIELD = \"value\";\n    private String instanceField;\n\n    static {\n        // static initializer block\n        System.out.println(\"Static Init\");\n    }\n\n    public Outline() {\n        this.instanceField = \"default\";\n    }\n\n    public Outline(String value) {\n        this.instanceField = value;\n    }\n\n    public String getInstanceField() {\n        return instanceField;\n    }\n\n    public static void staticMethod() {\n        // static method\n    }\n\n    private static class NestedClass {\n        private int nestedField;\n    }\n}"
- name: item
  line: 4
  column: 5
  text: "public static final String CONSTANT_FIELD = \"value\";"
- name: context
  line: 4
  column: 5
  text: public
- name: context
  line: 4
  column: 12
  text: static
- name: context
  line: 4
  column: 19
  text: final
- name: context
  line: 4
  column: 25
  text: String
- name: name
  line: 4
  column: 32
  text: CONSTANT_FIELD
- name: item
  line: 5
  column: 5
  text: private String instanceField;
- name: context
  line: 5
  column: 5
  text: private
- name: context
  line: 5
  column: 13
  text: String
- name: name
  line: 5
  column: 20
  text: instanceField
- name: context
  line: 7
  column: 5
  text: static
- name: item
  line: 7
  column: 12
  text: "{\n        // static initializer block\n        System.out.println(\"Static Init\");\n    }"
- name: context
  line: 12
  column: 5
  text: public
- name: name
  line: 12
  column: 12
  text: Outline
- name: context
  line: 12
  column: 19
  text: (
- name: context
  line: 12
  column: 20
  text: )
- name: item
  line: 12
  column: 22
  text: "{\n        this.instanceField = \"default\";\n    }"
- name: context
  line: 16
  column: 5
  text: public
- name: name
  line: 16
  column: 12
  text: Outline
- name: context
  line: 16
  column: 19
  text: (
- name: context
  line: 16
  column: 20
  text: String
- name: context
  line: 16
  column: 32
  text: )
- name: item
  line: 16
  column: 34
  text: "{\n        this.instanceField = value;\n    }"
- name: context
  line: 20
  column: 5
  text: public
- name: context
  line: 20
  column: 12
  text: String
- name: name
  line: 20
  column: 19
  text: getInstanceField
- name: context
  line: 20
  column: 35
  text: (
- name: context
  line: 20
  column: 36
  text: )
- name: item
  line: 20
  column: 38
  text: "{\n        return instanceField;\n    }"
- name: context
  line: 24
  column: 5
  text: public
- name: context
  line: 24
  column: 12
  text: static
- name: context
  line: 24
  column: 19
  text: void
- name: name
  line: 24
  column: 24
  text: staticMethod
- name: context
  line: 24
  column: 36
  text: (
- name: context
  line: 24
  column: 37
  text: )
- name: item
  line: 24
  column: 39
  text: "{\n        // static method\n    }"
- name: context
  line: 28
  column: 5
  text: private
- name: context
  line: 28
  column: 13
  text: static
- name: context
  line: 28
  column: 20
  text: class
- name: name
  line: 28
  column: 26
  text: NestedClass
- name: item
  line: 28
  column: 38
  text: "{\n        private int nestedField;\n    }"
- name: item
  line: 29
  column: 9
  text: private int nestedField;
- name: context
  line: 29
  column: 9
  text: private
- name: context
  line: 29
  column: 17
  text: int
- name: name
  line: 29
  column: 21
  text: nestedField
- name: context
  line: 33
  column: 1
  text: interface
- name: name
  line: 33
  column: 11
  text: ExampleInterface
- name: item
  line: 33
  column: 28
  text: "{\n    int INTERFACE_CONSTANT = 42;\n\n    void abstractMethod();\n\n    default void defaultMethod() {\n        // default method\n    }\n}"
- name: item
  line: 34
  column: 5
  text: int INTERFACE_CONSTANT = 42;
- name: context
  line: 34
  column: 5
  text: int
- name: name
  line: 34
  column: 9
  text: INTERFACE_CONSTANT
- name: context
  line: 36
  column: 5
  text: void
- name: name
  line: 36
  column: 10
  text: abstractMethod
- name: context
  line: 36
  column: 24
  text: (
- name: context
  line: 36
  column: 25
  text: )
- name: item
  line: 36
  column: 26
  text: ;
- name: context
  line: 38
  column: 13
  text: void
- name: name
  line: 38
  column: 18
  text: defaultMethod
- name: context
  line: 38
  column: 31
  text: (
- name: context
  line: 38
  column: 32
  text: )
- name: item
  line: 38
  column: 34
  text: "{\n        // default method\n    }"
- name: item
  line: 43
  column: 22
  text: String first
- name: context
  line: 43
  column: 22
  text: String
- name: name
  line: 43
  column: 29
  text: first
- name: item
  line: 43
  column: 36
  text: int second
- name: context
  line: 43
  column: 36
  text: int
- name: name
  line: 43
  column: 40
  text: second
- name: context
  line: 43
  column: 1
  text: record
- name: name
  line: 43
  column: 8
  text: ExampleRecord
- name: item
  line: 43
  column: 48
  text: "{\n    public ExampleRecord {\n        // compact constructor\n    }\n}"
- name: context
  line: 44
  column: 5
  text: public
- name: name
  line: 44
  column: 12
  text: ExampleRecord
- name: item
  line: 44
  column: 26
  text: "{\n        // compact constructor\n    }"
- name: context
  line: 49
  column: 1
  text: enum
- name: name
  line: 49
  column: 6
  text: ExampleEnum
- name: item
  line: 49
  column: 18
  text: "{\n    FIRST_CONSTANT,\n    SECOND_CONSTANT;\n}"
- name: item
  line: 50
  column: 5
  text: FIRST_CONSTANT
- name: name
  line: 50
  column: 5
  text: FIRST_CONSTANT
- name: item
  line: 51
  column: 5
  text: SECOND_CONSTANT
- name: name
  line: 51
  column: 5
  text: SECOND_CONSTANT
- name: context
  line: 54
  column: 1
  text: "@interface"
- name: name
  line: 54
  column: 12
  text: ExampleAnnotation
- name: item
  line: 54
  column: 30
  text: "{\n    String value() default \"default_val\";\n}"
- name: item
  line: 55
  column: 5
  text: "String value() default \"default_val\";"
- name: context
  line: 55
  column: 5
  text: String
- name: name
  line: 55
  column: 12
  text: value
- name: context
  line: 55
  column: 17
  text: (
- name: context
  line: 55
  column: 18
  text: )
