tests/languages/java/snapshots/runnables_default_package.snap
---
source: tests/support/mod.rs
assertion_line: 82
expression: captures
---
- name: _
  line: 1
  column: 1
  text: "public class DefaultPackage {\n    public static void main(String[] args) {\n        System.out.println(\"Hello world!\");\n    }\n}"
- name: class-modifier
  line: 1
  column: 1
  text: public
- name: java_class_name
  line: 1
  column: 14
  text: DefaultPackage
- name: modifier
  line: 2
  column: 5
  text: public static
- name: run
  line: 2
  column: 24
  text: main
- name: _
  line: 1
  column: 1
  text: "public class DefaultPackage {\n    public static void main(String[] args) {\n        System.out.println(\"Hello world!\");\n    }\n}"
- name: class-modifier
  line: 1
  column: 1
  text: public
- name: java_class_name
  line: 1
  column: 14
  text: DefaultPackage
- name: run
  line: 1
  column: 14
  text: DefaultPackage
- name: modifier
  line: 2
  column: 5
  text: public static
- name: method_name
  line: 2
  column: 24
  text: main
