tests/languages/java/snapshots/runnables_single_level.snap
---
source: tests/support/mod.rs
assertion_line: 126
expression: captures
---
- name: java_package_name
  line: 1
  column: 9
  text: example
- name: _
  line: 3
  column: 1
  text: "public class Main {\n    public static void main(String[] args) {\n        System.out.println(\"Hello world!\");\n    }\n}"
- name: class-modifier
  line: 3
  column: 1
  text: public
- name: java_class_name
  line: 3
  column: 14
  text: Main
- name: modifier
  line: 4
  column: 5
  text: public static
- name: run
  line: 4
  column: 24
  text: main
- name: java_package_name
  line: 1
  column: 9
  text: example
- name: _
  line: 3
  column: 1
  text: "public class Main {\n    public static void main(String[] args) {\n        System.out.println(\"Hello world!\");\n    }\n}"
- name: class-modifier
  line: 3
  column: 1
  text: public
- name: java_class_name
  line: 3
  column: 14
  text: Main
- name: run
  line: 3
  column: 14
  text: Main
- name: modifier
  line: 4
  column: 5
  text: public static
- name: method_name
  line: 4
  column: 24
  text: main
